--- a/estilos/styles.css
+++ b/estilos/styles.css
@@ -49,7 +49,7 @@ header {
   display: flex;
   flex-direction: column;
   height: 100%;
-  overflow: hidden; /* Ajustado para evitar el scroll extra */
+  overflow: scroll; /* Ajustado para evitar el scroll extra */
 }
 
 .page {
@@ -127,6 +127,14 @@ header {
 
 /* Media Query para pantallas pequeñas */
 @media (max-width: 768px) {
+
+  body {
+    overflow: hidden;
+  }
+
+.book-container {
+  overflow: scroll;
+}
 
   header {
     max-width: 100%;
@@ -223,7 +231,7 @@ header {
 }
 
 #page5-1 {
-  background: linear-gradient(to bottom, #e0e0e0 20%, #818181 50%, #818181 50%, #e0e0e0 100%);
+  background: linear-gradient(to bottom, #b5b5b5 20%, #b7ccd6 50%, #b7ccd6 50%, #b5b5b5 100%);
 }
 
 #imgd {
@@ -304,6 +312,15 @@ header {
 
 /* Media Query para pantallas grandes */
 @media (min-width: 769px) {
+
+  body {
+    overflow: hidden;
+  }
+
+  .book-container {
+    overflow: scroll;
+  }
+  
   .page {
     padding: 20px;
     display: flex; /* Usamos flexbox para centrar los elementos */
